--- a/FsharpScan/FsharpScan.fsproj
+++ b/FsharpScan/FsharpScan.fsproj
@@ -8,11 +8,11 @@
     <ProjectGuid>0300ab61-d0da-423b-a7cc-25dc7641f696</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>FsharpScan</RootNamespace>
-    <AssemblyName>FsharpScan</AssemblyName>
+    <AssemblyName>FSharpScan</AssemblyName>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>FsharpScan</Name>
+    <Name>FSharpScan</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
